IT WORKS!!!!!! (somewhat)

--- a/SimplePluginHost/Builds/VisualStudio2022/SimplePluginHost_StaticLibrary.vcxproj
+++ b/SimplePluginHost/Builds/VisualStudio2022/SimplePluginHost_StaticLibrary.vcxproj
@@ -139,7 +139,9 @@
     <Lib/>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Source\HostWindow.cpp"/>
     <ClCompile Include="..\..\..\Source\SimplePluginHost.cpp"/>
+    <ClCompile Include="..\..\..\Source\HostComponent.cpp"/>
     <ClCompile Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
@@ -1634,6 +1636,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\Source\HostComponent.hpp"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h"/>
